Small changes to get a start on social login / registration. This commit is just for fonts and the template setup nothing for registration yet.

--- a/models/page-templates/head-account.html
+++ b/models/page-templates/head-account.html
@@ -13,6 +13,7 @@
   <!-- Core CSS -->
   <link rel="stylesheet" href="#SITE_ROOT#css/bootstrap.css">
   <link rel="stylesheet" href="#SITE_ROOT#css/font-awesome.min.css">
+  <link rel="stylesheet" href="#SITE_ROOT#css/zocial.css" type="text/css" />
   <link rel="stylesheet" href="#SITE_ROOT#css/bootstrap-switch.min.css" type="text/css" />
   <link rel="stylesheet" href="#SITE_ROOT#css/typeahead.css" type="text/css" />
   <link rel="stylesheet" href="#SITE_ROOT#css/datepicker.css" type="text/css" />
@@ -30,13 +31,13 @@
   <script src="#SITE_ROOT#js/handlebars-v1.2.0.js"></script>
   <script src="#SITE_ROOT#js/bootstrap-switch.min.js"></script>
   <script src="#SITE_ROOT#js/bootstrapradio.js"></script>
-  <script src="#SITE_ROOT#js/bootstrap-datepicker.js"></script>  
+  <script src="#SITE_ROOT#js/bootstrap-datepicker.js"></script>
   <script src="#SITE_ROOT#js/tablesorter/jquery.tablesorter.min.js"></script>
   <script src="#SITE_ROOT#js/tablesorter/tables.js"></script>
   <script src="#SITE_ROOT#js/tablesorter/jquery.tablesorter.pager.min.js"></script>
   <script src="#SITE_ROOT#js/tablesorter/jquery.tablesorter.widgets.min.js"></script>
-  <script src="#SITE_ROOT#js/typeahead.js"></script> 
-  <script src="#SITE_ROOT#js/userfrosting.js"></script>	
+  <script src="#SITE_ROOT#js/typeahead.js"></script>
+  <script src="#SITE_ROOT#js/userfrosting.js"></script>
 
     
   <!-- Adjust padding for fixed navbars -->
