--- a/models/page-templates/head.html
+++ b/models/page-templates/head.html
@@ -17,6 +17,7 @@
   <link href="#SITE_ROOT#css/jumbotron-narrow.css" rel="stylesheet">
   
   <link rel="stylesheet" href="#SITE_ROOT#css/font-awesome.min.css">
+  <link rel="stylesheet" href="#SITE_ROOT#css/zocial.css" type="text/css" />
   <link rel="stylesheet" href="#SITE_ROOT#css/bootstrap-switch.min.css" type="text/css" />
    
   <!-- JavaScript -->
@@ -24,6 +25,6 @@
   <script src="#SITE_ROOT#js/bootstrap.js"></script>
   <script src="#SITE_ROOT#js/userfrosting.js"></script>
   <script src="#SITE_ROOT#js/date.min.js"></script>
-  <script src="#SITE_ROOT#js/handlebars-v1.2.0.js"></script> 
+  <script src="#SITE_ROOT#js/handlebars-v1.2.0.js"></script>
 
 </head>
